[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config="0.14.0"
aws-sdk-config = "0.14.0"
aws-types = "0.14.0"
aws-sdk-iam="0.14.0"
aws-sdk-route53 = "0.14.0"
aws-sdk-ec2 = "0.14.0"
fluent_builder = "0.6.0"
aws-sdk-account = "0.14.0"
tokio = { version = "1", features = ["full"] }
